Initial attempt at overflow fix

--- a/client/my-sites/migrate/section-migrate.scss
+++ b/client/my-sites/migrate/section-migrate.scss
@@ -92,8 +92,6 @@
 	flex-basis: 100%;
 	max-width: 180px;
 	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
 
 	.gridicon {
 		vertical-align: middle;
@@ -103,8 +101,11 @@
 
 .migrate__plan-upsell-item-label {
 	display: inline-block;
+	max-width:85%;
 	line-height: 18px;
 	vertical-align: middle;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .migrate__import-link {
